Cambio frontend crear socio

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionString": {
-    "ORTSocialConnection": "Server=CAMID\\SERVIDOR;Database=ORTSocialDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ORTSocialConnection": "Server=PC-PRINCIPAL\\SQLEXPRESS;Database=ORTSocialDB;Trusted_Connection=True;TrustServerCertificate=True;"
 
   }
 }
